--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ng-recaptcha": "^8.0.1",
     "ngx-filesaver": "^13.0.0",
     "ngx-pagination": "^5.1.1",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
